--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta http-equiv="X-UA-Compatible" content="ie.edge">
-    <title>Crex Studio</title>
+    <title>Crex Studio xd</title>
     <link rel="stylesheet" href="css/index.css">
     <link rel="shortcut icon" href="img/Icono.png">
 
