--- a/index.html
+++ b/index.html
@@ -75,6 +75,10 @@
       <h2>Nuestras Reliquias</h2>
       <div class="game">
         <h3>Dully</h3>
+        <p>Sumérgete en una aventura misteriosa, cínica y profunda, para ayudar a Dully a encontrarse a sí
+          misma antes de que sea demasiado tarde.
+        </p>
+        <a href="#">Ver más</a>
       </div>
     </div>
   </section>
@@ -83,7 +87,7 @@
   <div class="swiper mySwiper">
     <div class="swiper-wrapper">
       <div class="swiper-slide" id="slide1">Slide 1</div>
-      <div class="swiper-slide">Slide 2</div>
+      <div class="swiper-slide" id="slide2">Slide 2</div>
       <div class="swiper-slide">Slide 3</div>
       <div class="swiper-slide">Slide 4</div>
       <div class="swiper-slide">Slide 5</div>
