--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <p>Sumérgete en una aventura misteriosa, cínica y profunda, para ayudar a Dully a encontrarse a sí
           misma antes de que sea demasiado tarde.
         </p>
-        <a href="#">Ver más</a>
+        <a href="Dully.html">Ver más</a>
       </div>
     </div>
   </section>
