--- a/index.html
+++ b/index.html
@@ -24,52 +24,36 @@
     </section>
 
     <section class="sect1">
-    <div class="slider">
-        <div class="img-slider">
-            <div class="slide active">
-              <img src="1.jpg" alt="">
-              <div class="info">
-                <h2>Historias Impresionantes</h2>
-                <p>Sumergete en inumerables historias, llenas de aventura, misterio y drama.</p>
-              </div>
-            </div>
-            <div class="slide">
-              <img src="2.jpg" alt="">
-              <div class="info">
-                <h2>Personajes Únicos</h2>
-                <p>Encariñate con personajes únicos.</p>
-              </div>
-            </div>
-            <div class="slide">
-              <img src="3.jpg" alt="">
-              <div class="info">
-                <h2>Mundos Fascinantes</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-              </div>
-            </div>
-            <div class="slide">
-              <img src="4.jpg" alt="">
-              <div class="info">
-                <h2>Slide 04</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-              </div>
-            </div>
-            <div class="slide">
-              <img src="5.jpg" alt="">
-              <div class="info">
-                <h2>Slide 05</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-              </div>
-            </div>
-            <div class="navigation">
-              <div class="btn active"></div>
-              <div class="btn"></div>
-              <div class="btn"></div>
-              <div class="btn"></div>
-              <div class="btn"></div>
+        <!-- Swiper -->
+      <div class="swiper mySwiper" id="sw1">
+        <div class="swiper-wrapper">
+
+          <div class="swiper-slide" id="slide1-1">
+            <div>
+            <h2>Historias Impresionantes</h2>
+            <p>Sumergete en inumerables historias, llenas de aventura, misterio y drama.</p>
             </div>
           </div>
+
+          <div class="swiper-slide" id="slide1-2">
+            <div>
+            <h2>Personajes Únicos</h2>
+            <p>Encariñate con personajes únicos.</p>
+            </div>
+          </div>
+          
+          <div class="swiper-slide" id="slide1-3">
+            <div>
+            <h2>MUNDOS FASCINANTES</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            </div>
+          </div>
+
         </div>
+        <div class="swiper-button-next"></div>
+        <div class="swiper-button-prev"></div>
+        <div class="swiper-pagination"></div>
+      </div>
 
     <div class="games">
       <h2>Nuestras Reliquias</h2>
@@ -84,10 +68,10 @@
   </section>
 
 <section class="global-swiper-slide">
-  <div class="swiper mySwiper">
+  <div class="swiper mySwiper" id="sw2">
     <div class="swiper-wrapper">
-      <div class="swiper-slide" id="slide1">Slide 1</div>
-      <div class="swiper-slide" id="slide2">Slide 2</div>
+      <div class="swiper-slide" id="slide2-1">Slide 1</div>
+      <div class="swiper-slide" id="slide2-2">Slide 2</div>
       <div class="swiper-slide">Slide 3</div>
       <div class="swiper-slide">Slide 4</div>
       <div class="swiper-slide">Slide 5</div>
