--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
 
     <section class="portada">
-        <img src="img/Logo Blanco.png">
+        <img src="img/Logo Negativo.svg">
         <p>Calidad, conexión y diversión.</p>
     </section>
 
@@ -110,7 +110,7 @@
 
 
     <footer>
-      <div class="footer1"><img src="img/Logo Footer.png"></div>
+      <div class="footer1"><img src="img/Logo Negativo.svg"></div>
       <div class="footer2">
         <a href="#"><ion-icon name="logo-youtube"></ion-icon></ion-icon></a>
         <a href="#"><ion-icon name="logo-playstation"></ion-icon></a>
