--- a/index.html
+++ b/index.html
@@ -70,15 +70,11 @@
 <section class="global-swiper-slide">
   <div class="swiper mySwiper" id="sw2">
     <div class="swiper-wrapper">
-      <div class="swiper-slide" id="slide2-1">Slide 1</div>
-      <div class="swiper-slide" id="slide2-2">Slide 2</div>
-      <div class="swiper-slide">Slide 3</div>
-      <div class="swiper-slide">Slide 4</div>
-      <div class="swiper-slide">Slide 5</div>
-      <div class="swiper-slide">Slide 6</div>
-      <div class="swiper-slide">Slide 7</div>
-      <div class="swiper-slide">Slide 8</div>
-      <div class="swiper-slide">Slide 9</div>
+      <div class="swiper-slide" id="slide2-1"></div>
+      <div class="swiper-slide" id="slide2-2"></div>
+      <div class="swiper-slide" id="slide2-3"></div>
+      <div class="swiper-slide" id="slide2-4"></div>
+      <div class="swiper-slide" id="slide2-5"></div>
     </div>
     <div class="swiper-button-next"></div>
     <div class="swiper-button-prev"></div>
@@ -90,19 +86,19 @@
       <h2 class="sub-title">Creadores</h2>
       <div class="sub-creadores">
         <div>
-          <img src="img/Perfil.png">
+          <img src="img/Gabriela.jpg">
           <p>Gabriela Galvis</p>
         </div>
         <div>
-          <img src="img/Perfil.png">
+          <img src="img/Miguel.jpg">
           <p>Miguel Ballen</p>
         </div>
         <div>
-          <img src="img/Perfil.png">
+          <img src="img/Danna.jpg">
           <p>Danna Alvarado</p>
         </div>
         <div>
-          <img src="img/Perfil.png">
+          <img src="img/Patrick.jpg">
           <p>Jean Arcos</p>
         </div>
       </div>
