Un montón de cambios, uff

--- a/Dully.html
+++ b/Dully.html
@@ -29,34 +29,224 @@
     </section>
 
     <section class="sect1">
-        <h2>Personajes Principales</h2>
         <div class="sect1-1">
-            <div>
-                <img src="img/Dully/Dully Pix.png">
-                <h3>Dully Hybrid</h3>
-                <p>Protagonista</p>
-            </div>
+            <h2>HISTORIA</h2>
+            <p>En el año 2500 las guerras sofocaron al mundo, pero la situación tocó fondo, cuando una bomba atómica arrasó con todo a su paso, solo algunos sobrevivientes lograron escapar de explosión; tuvieron transformaciones, convirtiéndose en una nueva especie “los híbridos” solo algunos pocos humanos pudieron mantener su especie
 
-            <div>
-                <img src="img/Dully/Treor Pix.png">
-                <h3>Treor Marnatus</h3>
-                <p>Guía</p>
-            </div>
+                cuando Dully nació, los híbridos los descubrieron, y asesinaron a sus padres. Sin embargo, aquellas criaturas que habían terminado con la familia de Dully le tuvieron clemencia a la pequeña, en donde encontró una tribu para formarse.
+                
+                <br>Cuando cumple 19 años, Dully se empieza a extraviar poco a poco, hasta que pierde el sentido de su existencia y se da cuenta que se ha perdido a sí misma, cuando ve que ya no hay sombra alguna que persiga sus pasos.</p>
+        </div>
+        <iframe width="600" height="400" src="https://www.youtube.com/embed/nlHb_wGvnB0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </section>
 
-            <div>
-                <img src="img/Dully/allan.png">
-                <h3>Allan of the Darkness Hybrid</h3>
-                <p>Enemigo</p>
-            </div>
 
-            <div>
-                <img src="img/Dully/Erebo.png">
-                <h3>Erebo</h3>
-                <p>Guía</p>
+    <h2 class="title2">Personajes Principales</h2>
+    <section class="sect2">
+        <div class="col-12 mb-5">
+            <div class="card flip-card">
+                <div class="flip-card-inner">
+                    <div class="flip-card-front"><!-- frente de la tarjeta -->
+                        <div class="mask">
+                            <div class="align-end">
+                                <h3>Dully Hybrid</h3>
+                                <p>Protagonista</p>
+                            </div>
+                        </div>
+                        <img src="img/Dully/DullyPix.png" alt="imagen"><!-- Imagen frontal -->
+                    </div>
+                    <div class="flip-card-back"><!-- reverso de la tarjeta -->
+                        <div class="row no-gutters">
+                            <div class="card-body">
+                                <p><b>Edad:</b> 17 años.</p>
+                                <p><b>Estatus Social:</b> Clan Híbrido (Es humana).</p>
+                                <b>Miedos y debilidades:</b> <p>- No Contar consigo misma. <br> - Ser abandonada.</p>
+                                <b>Descripción</b>
+                                <p>Es una persona solitaria, hábil, ágil y buena mentirosa, se ha adaptado a un mundo destructivo, no le gusta seguir ordenes
+                                    y busca constantemente una escapatoria, no recuerda nada de su pasado pero sueña con algunos recuerdos.
+                                    Cree no tener ni una pizca de esperanza, pero algo sigue avivando una llama en su interior.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
+        </div>
 
+        <div class="col-12 mb-5">
+            <div class="card flip-card">
+                <div class="flip-card-inner">
+                    <div class="flip-card-front"><!-- frente de la tarjeta -->
+                        <div class="mask">
+                            <div class="align-end">
+                                <h3>Treor Marnatus</h3>
+                                <p>Guía</p>
+                            </div>
+                        </div>
+                        <img src="img/Dully/TreorPix.png" alt="imagen"><!-- Imagen frontal -->
+                    </div>
+                    <div class="flip-card-back"><!-- reverso de la tarjeta -->
+                        <div class="row no-gutters">
+                            <div class="card-body">
+                                <p><b>Edad:</b> 33 años.</p>
+                                <p><b>Estatus Social:</b> Desconocido.</p>
+                                <b>Miedos y debilidades:</b> <p>- El fuego. <br> - Fallar una promesa.</p>
+                                <b>Descripción</b>
+                                <p>Fue el único de su familia que sobrevivio a la radiación, desde entonces, lleva 17 años con una única misión, ayudar y ser guia para las personas que más lo necesitan.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-12 mb-5">
+            <div class="card flip-card">
+                <div class="flip-card-inner">
+                    <div class="flip-card-front"><!-- frente de la tarjeta -->
+                        <div class="mask">
+                            <div class="align-end">
+                                <h3>Allan Hybrid</h3>
+                                <p>Enemigo</p>
+                            </div>
+                        </div>
+                        <img src="img/Dully/AllanPix.png" alt="imagen"><!-- Imagen frontal -->
+                    </div>
+                    <div class="flip-card-back"><!-- reverso de la tarjeta -->
+                        <div class="row no-gutters">
+                            <div class="card-body">
+                                <p><b>Edad:</b> 42 años.</p>
+                                <p><b>Estatus Social:</b> Líder de los híbridos de Latent.</p>
+                                <b>Miedos y debilidades:</b> <p>- Volverse débil. <br> - Fallar una promesa.</p>
+                                <b>Descripción</b>
+                                <p>Tras la bomba, perdió a su esposa, desde entonces se ha vuelto alguién obsesivo, busca tener todo bajo control,
+                                    cree que los humanos ya quedaron atrás como especie y que solo quitan recursos a los híbridos, el único ser humano
+                                    que permitió rondar por lo poco que quedaba del mundo fue a Dully.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-12 mb-5">
+            <div class="card flip-card">
+                <div class="flip-card-inner">
+                    <div class="flip-card-front"><!-- frente de la tarjeta -->
+                        <div class="mask">
+                            <div class="align-end">
+                                <h3>Erebo</h3>
+                                <p>Guía</p>
+                            </div>
+                        </div>
+                        <img src="img/Dully/EreboPix.png" alt="imagen"><!-- Imagen frontal -->
+                    </div>
+                    <div class="flip-card-back"><!-- reverso de la tarjeta -->
+                        <div class="row no-gutters">
+                            <div class="card-body">
+                                <p><b>Edad:</b> Desconocido.</p>
+                                <p><b>Estatus Social:</b> Dios de la oscuridad y las sombras.</p>
+                                <b>Miedos y debilidades:</b> <p>Desconocido.</p>
+                                <b>Descripción</b>
+                                <p> Su esposa es Nix, diosa de la Noche, quien también es su hermana. Se decía que sus densas nieblas de oscuridad rodeaban los bordes del mundo y llenaban los sombríos lugares subterráneos.
+                                    <br>Nix arrastraba las oscuras nieblas de Érebo por los cielos llevando la noche al mundo.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </section>
+
+    <section class="sect3">
+        <div class="sect3-1">
+            <h2>Sprites Enemigos</h2>
+            <div class="swiper mySwiper" id="sw1">
+                <div class="swiper-wrapper">
+                  <div class="swiper-slide"><img src="img/Dully/Obstáculo1.png"></div>
+                  <div class="swiper-slide"><img src="img/Dully/Obstáculo2.png"></div>
+                  <div class="swiper-slide"><img src="img/Dully/Obstáculo3.png"></div>
+                </div>
+                <div class="swiper-button-next"></div>
+                <div class="swiper-button-prev"></div>
+                <div class="swiper-pagination"></div>
+              </div>
+        </div>
+
+        <div class="sect3-2">
+            <h2>Bocetos</h2>
+            <div class="swiper mySwiper" id="sw2">
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide"><img src="img/Dully/Boceto-Dully1.jpg"></div>
+                    <div class="swiper-slide"><img src="img/Dully/Boceto-Dully2.jpg"></div>
+                    <div class="swiper-slide"><img src="img/Dully/Boceto-Dully3.jpg"></div>
+                    <div class="swiper-slide"><img src="img/Dully/Boceto-Digital-Dully1.jpg"></div>
+                    <div class="swiper-slide"><img src="img/Dully/Boceto-Digital-Dully2.png"></div>
+                    <div class="swiper-slide"><img src="img/Dully/Boceto-Allan.jpg"></div>
+                    <div class="swiper-slide"><img src="img/Dully/Boceto-Erebo.jpeg"></div>
+                    <div class="swiper-slide"><img src="img/Dully/Boceto-Sprite1.jpg"></div>
+                    <div class="swiper-slide"><img src="img/Dully/Boceto-Sprite2.jpg"></div>
+                </div>
+                <div class="swiper-button-next"></div>
+                <div class="swiper-button-prev"></div>
+                <div class="swiper-pagination"></div>
+              </div>
         </div>
     </section>
+
+    <h2 class="title4">Escenarios</h2>
+    <section class="sect4">
+
+    </section>
+
+
+    <!--JS-->
+
+    <script src="js/slider.js" type="text/javascript"></script>
+     <!-- Swiper JS -->
+     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+
+     <!-- Initialize Swiper -->
+     <script>
+       var swiper = new Swiper("#sw1", {
+         spaceBetween: 30,
+         centeredSlides: true,
+         autoplay: {
+           delay: 2000,
+           disableOnInteraction: false,
+         },
+         pagination: {
+           el: ".swiper-pagination",
+           clickable: true,
+         },
+         navigation: {
+           nextEl: ".swiper-button-next",
+           prevEl: ".swiper-button-prev",
+         },
+       });
+
+       var swiper = new Swiper("#sw2", {
+         spaceBetween: 30,
+         centeredSlides: true,
+         autoplay: {
+           delay: 2500,
+           disableOnInteraction: false,
+         },
+         pagination: {
+           el: ".swiper-pagination",
+           clickable: true,
+         },
+         navigation: {
+           nextEl: ".swiper-button-next",
+           prevEl: ".swiper-button-prev",
+         },
+       });
+
+     </script>
 
 </body>
 </html>
