--- a/index.html
+++ b/index.html
@@ -58,11 +58,13 @@
     <div class="games">
       <h2>Nuestras Reliquias</h2>
       <div class="game">
+        <div class="content-game">
         <h3>Dully</h3>
         <p>Sumérgete en una aventura misteriosa, cínica y profunda, para ayudar a Dully a encontrarse a sí
           misma antes de que sea demasiado tarde.
         </p>
         <a href="Dully.html">Ver más</a>
+        </div>
       </div>
     </div>
   </section>
