--- a/Dully.html
+++ b/Dully.html
@@ -37,7 +37,7 @@
                 
                 <br>Cuando cumple 19 años, Dully se empieza a extraviar poco a poco, hasta que pierde el sentido de su existencia y se da cuenta que se ha perdido a sí misma, cuando ve que ya no hay sombra alguna que persiga sus pasos.</p>
         </div>
-        <iframe width="600" height="400" src="https://www.youtube.com/embed/nlHb_wGvnB0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe src="https://www.youtube.com/embed/nlHb_wGvnB0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </section>
 
 
@@ -198,10 +198,15 @@
         </div>
     </section>
 
-    <h2 class="title4">Escenarios</h2>
-    <section class="sect4">
-
-    </section>
+    <footer>
+        <div class="footer1"><img src="img/Logo Negativo.svg"></div>
+        <div class="footer2">
+          <a href="#"><ion-icon name="logo-youtube"></ion-icon></ion-icon></a>
+          <a href="#"><ion-icon name="logo-playstation"></ion-icon></a>
+          <a href="#"><ion-icon name="logo-google-playstore"></ion-icon></a>
+          <a href="#"><ion-icon name="logo-apple-appstore"></ion-icon></a>
+        </div>
+    </footer>
 
 
     <!--JS-->
@@ -247,6 +252,9 @@
        });
 
      </script>
+
+     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 
 </body>
 </html>
