--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           <div class="swiper-slide" id="slide1-3">
             <div>
             <h2>MUNDOS FASCINANTES</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            <p>Explora una diversidad de mundos, desde lúgubres y abstractos, hasta los más coloridos y dulces.</p>
             </div>
           </div>
 
