--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Crex Studio</title>
     <link rel="stylesheet" href="css/index.css">
     <link rel="shortcut icon" href="img/Icono.png">
+    <meta name="author" content="Gabriela Galvis" />
 
      <!-- Link Swiper's CSS -->
      <link
